--- a/software.html
+++ b/software.html
@@ -39,6 +39,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424558-senior-software-engineer-with-saas-products-java-javascript-aws-agile-scrum-environment-'>Bey Senior Software Engineer with SaaS products, Java, JavaScript, AWS, agile/scrum environment. | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://www.stoutsystems.com/job/2900-SM/'>Software Developer - Qt</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=o0jy9fwK&__jvst=Employee&__jvsd=sTRQZgwk&__jvsc=Twitter&bid=nqbKnMwZ'>Schneider Electric NAM Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
@@ -111,7 +119,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409676-junior-software-developer'>LaunchCode Junior Software Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409676-junior-software-developer'>LaunchCode Junior Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -175,11 +183,11 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/globalsign/jobs/senior-software-engineer-bgidOM-L0r6BGMaKjNoogA'>Senior Software Engineer #0254 job at GlobalSign in London, United Kingdom, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/globalsign/jobs/senior-software-engineer-bgidOM-L0r6BGMaKjNoogA'>Senior Software Engineer #0254 job at GlobalSign in London, United Kingdom, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom London, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vgs/7eed1a68-cf63-4b1a-9bc1-2c20793fd704'>Very Good Security - Junior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/vgs/7eed1a68-cf63-4b1a-9bc1-2c20793fd704'>Very Good Security - Junior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Lviv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -263,7 +271,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://Fanatee.recruiterbox.com/jobs/fk03i8j'>
+<h5><a href='http://Fanatee.recruiterbox.com/jobs/fk03i8j'>
     Software Engineer - Backend at Fanatee
 </a></h5> 
 <p><span class="badge badge-light">S?o Paulo S?o Paulo</span></p>
@@ -289,7 +297,7 @@
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698356784-senior-software-engineer-backend-coverage-connection-excellence-team-m-f-d-'>Omio Senior Software Engineer - Backend/ Coverage/ Connection Excellence Team (m / f / d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698356784-senior-software-engineer-backend-coverage-connection-excellence-team-m-f-d-'>Omio Senior Software Engineer - Backend/ Coverage/ Connection Excellence Team (m / f / d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -365,7 +373,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oRN7afwF&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nFnWmMwB'>NICE Actimize Careers - Expert Software Developer - AWS</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oRN7afwF&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nFnWmMwB'>NICE Actimize Careers - Expert Software Developer - AWS</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -409,7 +417,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698344147-senior-net-software-engineer-joining-bonus-'>KMS Technology SENIOR .NET SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698344147-senior-net-software-engineer-joining-bonus-'>KMS Technology SENIOR .NET SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -429,16 +437,8 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/C8vCWtLAPt/Product-Analytics-Developer-Software-Engineer-'>Product Analytics Developer (Software Engineer ) - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/C8vCWtLAPt/Product-Analytics-Developer-Software-Engineer-'>Product Analytics Developer (Software Engineer ) - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o1K89fwM&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nwZRmMwZ'>Palo Alto Networks Careers - Software Engineer - Malware Signatures</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/deputy/e5d01de8-41f2-4e8c-8331-b006287c83dc'>Deputy - Junior Software Engineer - Implementations</a></h5> 
-<p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
